--- a/eng/pipelines/templates/steps/npm-release-task.yml
+++ b/eng/pipelines/templates/steps/npm-release-task.yml
@@ -15,7 +15,9 @@ steps:
         $tempDir = "$(System.DefaultWorkingDirectory)/temp_decompress"
         New-Item -ItemType Directory -Force -Path $tempDir
         tar -xzf $tarFile -C $tempDir
-        $pkg = Get-Content -Raw "$tempDir\package\package.json" | ConvertFrom-Json
+        $packageJsonDir = "$tempDir\package\package.json"
+        echo "##vso[task.setvariable variable=PackageJsonDir]$packageJsonDir"
+        $pkg = Get-Content -Raw "$packageJsonDir"" | ConvertFrom-Json
         $packageName = $pkg.Name
         $packageVersion = $pkg.Version
         $packageProps = npm view $packageName -json | ConvertFrom-Json
@@ -51,7 +53,7 @@ steps:
       inputs:
         targetType: filePath
         filePath: eng/scripts/verify-npm-tags.ps1
-        arguments: -pathToArtifacts ${{parameters.PathToArtifacts}} -originalDistTags '$(OriginalTags)' -intendedTag ${{parameters.Tag}} -intendedTagVersion '$(IntendedTagVersion)'
+        arguments: -pathToArtifacts ${{parameters.PathToArtifacts}} -originalDistTags '$(OriginalTags)' -intendedTag ${{parameters.Tag}} -intendedTagVersion '$(IntendedTagVersion)' -packageJson $(PackageJsonDir)
         pwsh: true
 
     - ${{ if ne(parameters.AdditionalTag, '') }}:
