--- a/sdk/microsoft.app/microsoft-app-dynamicsessions-rest/samples/v1-beta/javascript/package.json
+++ b/sdk/microsoft.app/microsoft-app-dynamicsessions-rest/samples/v1-beta/javascript/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@azure-rest/microsoft-app-dynamicsessions-rest": "next",
     "dotenv": "latest",
-    "@azure/identity": "^4.2.1"
+    "@azure/identity": "^4.2.1",
+    "@azure/core-paging": "^1.5.0"
   }
 }
