--- a/sdk/microsoft.app/microsoft-app-dynamicsessions-rest/samples/v1-beta/typescript/package.json
+++ b/sdk/microsoft.app/microsoft-app-dynamicsessions-rest/samples/v1-beta/typescript/package.json
@@ -32,8 +32,7 @@
   "dependencies": {
     "@azure-rest/microsoft-app-dynamicsessions-rest": "next",
     "dotenv": "latest",
-    "@azure/identity": "^4.2.1",
-    "@azure/core-paging": "^1.5.0"
+    "@azure/identity": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
