--- a/sdk/monitor/monitor-opentelemetry/tsconfig.json
+++ b/sdk/monitor/monitor-opentelemetry/tsconfig.json
@@ -2,23 +2,12 @@
   "extends": "../../../tsconfig",
   "compilerOptions": {
     "paths": {
-      "@azure/monitor-opentelemetry": [
-        "./src/index"
-      ]
+      "@azure/monitor-opentelemetry": ["./src/index"]
     },
-    "lib": [
-      "es6",
-      "dom"
-    ],
+    "lib": ["es6", "dom"],
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "rootDir": "."
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.mts",
-    "src/**/*.cts",
-    "samples-dev/**/*.ts",
-    "test/**/*.ts"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.mts", "src/**/*.cts", "samples-dev/**/*.ts", "test/**/*.ts"]
 }
