--- a/eng/pipelines/templates/steps/npm-release-task.yml
+++ b/eng/pipelines/templates/steps/npm-release-task.yml
@@ -41,7 +41,7 @@ steps:
         ServiceEndpointUrl: 'https://api.esrp.microsoft.com'
         MainPublisher: 'ESRPRELPACMANTEST'
         DomainTenantId: '72f988bf-86f1-41af-91ab-2d7cd011db47'
-        productstate: 'latest' #${{parameters.Tag}}
+        productstate: ${{parameters.Tag}}
 
     - task: Powershell@2
       displayName: Verify package tags
