--- a/sdk/communication/communication-call-automation/package.json
+++ b/sdk/communication/communication-call-automation/package.json
@@ -3,9 +3,9 @@
   "version": "1.3.0-beta.1",
   "description": "Azure client library for Azure Communication Call Automation services",
   "sdk-type": "client",
-  "main": "dist/index.js",
-  "module": "dist-esm/src/index.js",
-  "types": "types/communication-call-automation.d.ts",
+  "main": "./dist/commonjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/commonjs/index.d.ts",
   "browser": "./dist/browser/index.js",
   "scripts": {
     "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
@@ -70,17 +70,17 @@
     }
   },
   "dependencies": {
-    "@azure/abort-controller": "^2.0.0",
+    "@azure/abort-controller": "^2.1.2",
     "@azure/communication-common": "^2.3.1",
-    "@azure/core-auth": "^1.3.0",
-    "@azure/core-client": "^1.3.0",
-    "@azure/core-paging": "^1.1.1",
-    "@azure/core-rest-pipeline": "^1.3.0",
-    "@azure/core-tracing": "^1.0.0",
-    "@azure/core-util": "^1.6.1",
-    "@azure/logger": "^1.0.0",
+    "@azure/core-auth": "^1.9.0",
+    "@azure/core-client": "^1.9.2",
+    "@azure/core-paging": "^1.6.2",
+    "@azure/core-rest-pipeline": "^1.17.0",
+    "@azure/core-tracing": "^1.2.0",
+    "@azure/core-util": "^1.11.0",
+    "@azure/logger": "^1.1.4",
     "events": "^3.0.0",
-    "tslib": "^2.2.0"
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@azure-tools/test-credential": "^2.0.0",
@@ -90,7 +90,7 @@
     "@azure/communication-phone-numbers": "^1.2.0",
     "@azure/dev-tool": "^1.0.0",
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
-    "@azure/service-bus": "^7.8.1",
+    "@azure/service-bus": "^7.9.5",
     "@types/node": "^18.0.0",
     "@vitest/browser": "^2.1.4",
     "@vitest/coverage-istanbul": "^2.1.4",
@@ -99,7 +99,6 @@
     "inherits": "^2.0.3",
     "playwright": "^1.48.2",
     "typescript": "~5.6.2",
-    "util": "^0.12.1",
     "vitest": "^2.1.4"
   },
   "type": "module",
@@ -117,5 +116,26 @@
       "react-native"
     ],
     "selfLink": false
+  },
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "browser": {
+        "types": "./dist/browser/index.d.ts",
+        "default": "./dist/browser/index.js"
+      },
+      "react-native": {
+        "types": "./dist/react-native/index.d.ts",
+        "default": "./dist/react-native/index.js"
+      },
+      "import": {
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "require": {
+        "types": "./dist/commonjs/index.d.ts",
+        "default": "./dist/commonjs/index.js"
+      }
+    }
   }
 }
