--- a/sdk/ai/ai-projects/tsconfig.json
+++ b/sdk/ai/ai-projects/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "rootDir": ".",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "paths": { "@azure/ai-projects": ["./src/index"] }
   },
   "include": ["./src/**/*.ts", "./src/**/*.mts", "./src/**/*.cts", "test/**/*.ts", "src/**/*.ts", "samples-dev/**/*.ts"]
 }
