--- a/eng/pipelines/templates/steps/npm-release-task.yml
+++ b/eng/pipelines/templates/steps/npm-release-task.yml
@@ -23,8 +23,6 @@ steps:
         $originalTags = $packageProps.'dist-tags' | ConvertTo-Json -Compress
         echo "##vso[task.setvariable variable=OriginalTags]$originalTags"
         echo "##vso[task.setvariable variable=IntendedTagVersion]$packageVersion"
-        write-host "nhznunzusnzusnzuwnzuw"
-        write-host '$(azure-sdk-npm-token)'
       displayName: Get original tags
 
     - task: EsrpRelease@7
@@ -43,7 +41,7 @@ steps:
         ServiceEndpointUrl: 'https://api.esrp.microsoft.com'
         MainPublisher: 'ESRPRELPACMANTEST'
         DomainTenantId: '72f988bf-86f1-41af-91ab-2d7cd011db47'
-        # productstate: ${{parameters.Tag}}
+        productstate: 'dev' #${{parameters.Tag}}
 
     - task: Powershell@2
       displayName: Verify package tags
