--- a/eng/pipelines/templates/steps/npm-release-task.yml
+++ b/eng/pipelines/templates/steps/npm-release-task.yml
@@ -15,12 +15,12 @@ steps:
         New-Item -ItemType Directory -Force -Path $tempDir
         tar -xzf $tarFile -C $tempDir
         $packageJsonDir = "$tempDir\package\package.json"
-        echo "##vso[task.setvariable variable=PackageJsonDir]$packageJsonDir"
         $pkg = Get-Content -Raw "$packageJsonDir" | ConvertFrom-Json
         $packageName = $pkg.Name
         $packageVersion = $pkg.Version
         $packageProps = npm view $packageName -json | ConvertFrom-Json
         $originalTags = $packageProps.'dist-tags' | ConvertTo-Json -Compress
+        echo "##vso[task.setvariable variable=PackageName]$packageName"
         echo "##vso[task.setvariable variable=OriginalTags]$originalTags"
         echo "##vso[task.setvariable variable=IntendedTagVersion]$packageVersion"
       displayName: Get original tags
@@ -41,14 +41,14 @@ steps:
         ServiceEndpointUrl: 'https://api.esrp.microsoft.com'
         MainPublisher: 'ESRPRELPACMANTEST'
         DomainTenantId: '72f988bf-86f1-41af-91ab-2d7cd011db47'
-        productstate: ${{parameters.Tag}}
+        productstate: 'dev' ${{parameters.Tag}}
 
     - task: Powershell@2
       displayName: Verify package tags
       inputs:
         targetType: filePath
         filePath: eng/scripts/verify-npm-tags.ps1
-        arguments: -originalDistTags '$(OriginalTags)' -intendedTag ${{parameters.Tag}} -intendedTagVersion '$(IntendedTagVersion)' -packageJson $(PackageJsonDir) -npmToken '$(azure-sdk-npm-token)'
+        arguments: -originalDistTags '$(OriginalTags)' -intendedTag ${{parameters.Tag}} -intendedTagVersion '$(IntendedTagVersion)' -packageName $(PackageName) -npmToken '$(azure-sdk-npm-token)'
         pwsh: true
 
     - ${{ if ne(parameters.AdditionalTag, '') }}:
