[communication] Update @azure/communication-call-automation to ESM/vitest

--- a/sdk/communication/communication-call-automation/package.json
+++ b/sdk/communication/communication-call-automation/package.json
@@ -86,6 +86,7 @@
     "@azure-tools/test-credential": "^2.0.0",
     "@azure-tools/test-recorder": "^4.1.0",
     "@azure-tools/test-utils-vitest": "^1.0.0",
+    "@azure-tools/vite-plugin-browser-test-map": "^1.0.0",
     "@azure/communication-identity": "^1.2.0",
     "@azure/communication-phone-numbers": "^1.2.0",
     "@azure/dev-tool": "^1.0.0",
