--- a/sdk/communication/communication-toll-free-verification/tsconfig.json
+++ b/sdk/communication/communication-toll-free-verification/tsconfig.json
@@ -2,19 +2,11 @@
   "extends": "../../../tsconfig",
   "compilerOptions": {
     "paths": {
-      "@azure-tools/communication-toll-free-verification": [
-        "./src/index"
-      ]
+      "@azure-tools/communication-toll-free-verification": ["./src/index"]
     },
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "rootDir": "."
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.mts",
-    "src/**/*.cts",
-    "samples-dev/**/*.ts",
-    "test/**/*.ts"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.mts", "src/**/*.cts", "samples-dev/**/*.ts", "test/**/*.ts"]
 }
