remove types/ and dist-esm/ from package.json of ESM packages
also restore api-management binary code from build result

--- a/sdk/apimanagement/api-management-custom-widgets-scaffolder/package.json
+++ b/sdk/apimanagement/api-management-custom-widgets-scaffolder/package.json
@@ -26,8 +26,7 @@
   "files": [
     "dist/",
     "bin/",
-    "LICENSE",
-    "dist-esm/src"
+    "LICENSE"
   ],
   "type": "module",
   "scripts": {
