--- a/sdk/web-pubsub/web-pubsub-client-protobuf/package.json
+++ b/sdk/web-pubsub/web-pubsub-client-protobuf/package.json
@@ -21,7 +21,7 @@
     "build:samples": "dev-tool samples publish -f",
     "build:test": "npm run build-protobuf && dev-tool run build-package && npm run copy-files",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
-    "clean": "dev-tool run vendored rimraf --glob dist dist-esm test-dist temp types *.tgz *.log",
+    "clean": "dev-tool run vendored rimraf --glob dist test-dist temp types *.tgz *.log",
     "copy-files": "npm run copy-files:cjs && npm run copy-files:esm",
     "copy-files:cjs": "cpy --flat --rename=clientProto.js ./src/generated/clientProto.cjs ./dist/commonjs/generated/ && cpy --flat ./src/generated/clientProto.d.ts ./dist/esm/generated/",
     "copy-files:esm": "cpy --flat ./src/generated/clientProto.js ./dist/esm/generated/ && cpy --flat ./src/generated/clientProto.d.ts ./dist/esm/generated/",
@@ -44,7 +44,6 @@
   },
   "files": [
     "dist/",
-    "dist-esm/",
     "types/web-pubsub-client-protobuf.d.ts",
     "types/web-pubsub-client-protobuf.d.ts.map",
     "README.md",
