--- a/sdk/identity/identity/package.json
+++ b/sdk/identity/identity/package.json
@@ -105,7 +105,6 @@
     "@types/ms": "^0.7.31",
     "@types/node": "^18.0.0",
     "@types/stoppable": "^1.1.0",
-    "@types/uuid": "^8.0.0",
     "@vitest/browser": "^2.1.4",
     "@vitest/coverage-istanbul": "^2.1.4",
     "dotenv": "^16.0.0",
@@ -129,8 +128,7 @@
       "commonjs"
     ],
     "esmDialects": [
-      "browser",
-      "react-native"
+      "browser"
     ],
     "selfLink": false
   },
@@ -140,10 +138,6 @@
       "browser": {
         "types": "./dist/browser/index.d.ts",
         "default": "./dist/browser/index.js"
-      },
-      "react-native": {
-        "types": "./dist/react-native/index.d.ts",
-        "default": "./dist/react-native/index.js"
       },
       "import": {
         "types": "./dist/esm/index.d.ts",
