--- a/sdk/contentsafety/ai-content-safety-rest/tsp-location.yaml
+++ b/sdk/contentsafety/ai-content-safety-rest/tsp-location.yaml
@@ -1,3 +1,4 @@
 directory: specification/cognitiveservices/ContentSafety
+commit: d85dc63616d14d9790b224d46aad024e3461955b
 repo: Azure/azure-rest-api-specs
-commit: e6fde2ac19d0202f0e72217a3e0f9edb63dba273
+additionalDirectories:
