[EngSys] Update pnpm ***NO_CI***

--- a/eng/pipelines/templates/jobs/live.tests.yml
+++ b/eng/pipelines/templates/jobs/live.tests.yml
@@ -106,19 +106,18 @@ jobs:
                 ${{ insert }}: ${{ parameters.EnvVars }}
 
       - script: |
-          node common/scripts/install-run-rush.js install
+          npm install -g pnpm
+          pnpm install
         displayName: "Install dependencies"
 
       # Option "-p max" ensures parallelism is set to the number of cores on all platforms, which improves build times.
-      # The default on Windows is "cores - 1" (microsoft/rushstack#436).
       - script: |
-          node common/scripts/install-run-rush.js build -t "${{parameters.PackageName}}" --verbose -p max
+          pnpm build -filter=="${{parameters.PackageName}}" --concurrency=100%
         displayName: "Build libraries"
 
       # Option "-p max" ensures parallelism is set to the number of cores on all platforms, which improves build times.
-      # The default on Windows is "cores - 1" (microsoft/rushstack#436).
       - script: |
-          node common/scripts/install-run-rush.js build:test -t "${{parameters.PackageName}}" --verbose -p max
+          pnpm build:test -t "${{parameters.PackageName}}" --concurrency=100%
         displayName: "Build test assets"
         condition: and(succeededOrFailed(),eq(variables['DependencyVersion'],''))
 
@@ -130,13 +129,13 @@ jobs:
         condition: and(succeededOrFailed(),ne(variables['DependencyVersion'],''))
 
       - script: |
-          node common/scripts/install-run-rush.js update
-        displayName: "Rush update"
+          pnpm install
+        displayName: "pnpm install"
         workingDirectory: $(Build.SourcesDirectory)
         condition: and(succeededOrFailed(),ne(variables['DependencyVersion'],''))
 
       - script: |
-          node $(Build.SourcesDirectory)/common/scripts/install-run-rushx.js build
+          pnpm build
         displayName: "Build test package"
         workingDirectory: $(PackageTestPath)
         condition: and(succeededOrFailed(),ne(variables['DependencyVersion'],''))
@@ -211,7 +210,7 @@ jobs:
               $env:AZURESUBSCRIPTION_CLIENT_ID = $account.Id
               $env:AZURESUBSCRIPTION_TENANT_ID = $account.Tenants
 
-              node ../../../common/scripts/install-run-rushx.js integration-test:$(TestType)
+              pnpm integration-test:$(TestType)
               exit $LASTEXITCODE
           displayName: "Integration test libraries"
           condition: and(succeededOrFailed(),ne(variables['TestType'],'sample'),eq(variables['DependencyVersion'],''))
@@ -232,7 +231,7 @@ jobs:
               $env:AZURESUBSCRIPTION_CLIENT_ID = $account.Id
               $env:AZURESUBSCRIPTION_TENANT_ID = $account.Tenants
 
-              node $(Build.SourcesDirectory)/common/scripts/install-run-rushx.js integration-test:$(TestType)
+              pnpm integration-test:$(TestType)
               exit $LASTEXITCODE
           displayName: "Integration test libraries"
           condition: and(succeeded(),ne(variables['TestType'],'sample'),ne(variables['DependencyVersion'],''))
@@ -255,7 +254,7 @@ jobs:
               $env:AZURESUBSCRIPTION_CLIENT_ID = $account.Id
               $env:AZURESUBSCRIPTION_TENANT_ID = $account.Tenants
 
-              node ../../../common/scripts/install-run-rushx.js execute:samples
+              pnpm execute:samples
               exit $LASTEXITCODE
           displayName: "Execute Samples"
           env:
@@ -269,7 +268,7 @@ jobs:
 
       - ${{ else }}:
         - script: |
-            node ../../../common/scripts/install-run-rushx.js integration-test:$(TestType)
+            pnpm integration-test:$(TestType)
           displayName: "Integration test libraries"
           workingDirectory: $(PackagePath)
           condition: and(succeededOrFailed(),ne(variables['TestType'],'sample'),eq(variables['DependencyVersion'],''))
@@ -279,7 +278,7 @@ jobs:
             ${{ insert }}: ${{ parameters.EnvVars }}
 
         - script: |
-            node $(Build.SourcesDirectory)/common/scripts/install-run-rushx.js integration-test:$(TestType)
+            pnpm integration-test:$(TestType)
           displayName: "Integration test libraries"
           workingDirectory: $(PackageTestPath)
           condition: and(succeeded(),ne(variables['TestType'],'sample'),ne(variables['DependencyVersion'],''))
@@ -291,7 +290,7 @@ jobs:
         - ${{ parameters.PostSteps }}
 
         - script: |
-            node ../../../common/scripts/install-run-rushx.js execute:samples
+            pnpm execute:samples
           displayName: "Execute Samples"
           workingDirectory: $(PackagePath)
           env:
@@ -329,11 +328,11 @@ jobs:
 
       # Unlink node_modules folders to significantly improve performance of subsequent tasks
       # which need to walk the directory tree (and are hardcoded to follow symlinks).
-      # Retry for 30 seconds, since this command may fail with error "Another rush command is already
-      # running in this repository" if the previous rush command was killed.
+      # Retry for 30 seconds, since this command may fail with error "Another pnpm command is already
+      # running in this repository" if the previous pnpm command was killed.
       - pwsh: |
           for ($i=0; $i -lt 30; $i++) {
-            node eng/tools/rush-runner.js unlink
+            pnpm unlink
             if ($lastexitcode -eq 0) {
               break
             }
