--- a/eng/pipelines/templates/steps/run-eslint.yml
+++ b/eng/pipelines/templates/steps/run-eslint.yml
@@ -3,10 +3,11 @@ parameters:
 
 steps:
   - script: |
-      node common/scripts/install-run-rush.js install
+      npm install -g pnpm
+      pnpm install
     displayName: "Install library dependencies"
 
   - pwsh: |
-      node common/scripts/install-run-rush.js build -t @azure/eslint-plugin-azure-sdk -t @azure/monitor-opentelemetry-exporter
-      node eng/tools/rush-runner.js lint "${{parameters.ServiceDirectories}}" -p max
+      pnpm build -=filter=@azure/eslint-plugin-azure-sdk --filter=@azure/monitor-opentelemetry-exporter
+      pnpm lint "${{parameters.ServiceDirectories}}"
     displayName: "Build ESLint Plugin and Lint Libraries"
