--- a/eng/pipelines/weekly_automation.yml
+++ b/eng/pipelines/weekly_automation.yml
@@ -2,8 +2,8 @@ trigger: none
 pr: none
 
 jobs:
-- job: 'RushUpdate'
-  displayName: 'Rush update full'
+- job: 'PnpmUpdate'
+  displayName: 'pnpm update full'
   variables:
   - template: /eng/pipelines/templates/variables/globals.yml
 
@@ -16,18 +16,18 @@ jobs:
   - template: /eng/common/pipelines/templates/steps/set-default-branch.yml
 
   - script: |
-      node common/scripts/install-run-rush.js install
-      node common/scripts/install-run-rush.js update --full
-    displayName: "Run Rush Update"
+      npm install -g pnpm
+      pnpm up --latest
+    displayName: "Run pnpm Update"
 
   - template: /eng/common/pipelines/templates/steps/create-pull-request.yml
     parameters:
       RepoName: azure-sdk-for-js
       BaseBranchName: $(DefaultBranch)
-      PRBranchName: automated-rush-update-full
-      CommitMsg: "Automatic rush update --full"
-      PRTitle: "[EngSys] automatic rush update --full"
-      PRBody: "This is an automatic PR generated weekly with changes from running the command rush update --full"
+      PRBranchName: automated-pnpm-update-full
+      CommitMsg: "Automatic pnpm up --latest"
+      PRTitle: "[EngSys] automatic pnpm up --latest"
+      PRBody: "This is an automatic PR generated weekly with changes from running the command pnpm up --latest"
       PushArgs: "-f"
 
 
@@ -45,10 +45,10 @@ jobs:
   - template: /eng/common/pipelines/templates/steps/set-default-branch.yml
 
   - script: |
-      node common/scripts/install-run-rush.js install
-      node common/scripts/install-run-rush.js unlink
+      npm install -g pnpm
+      pnpm unlink
       git clean -xdf
-    displayName: "Rush Unlink"
+    displayName: "pnpm Unlink"
 
   - task: PowerShell@2
     displayName: 'Check Dependency Warnings and File GitHub Issues'
