--- a/sdk/hybridcompute/arm-hybridcompute/package.json
+++ b/sdk/hybridcompute/arm-hybridcompute/package.json
@@ -71,7 +71,7 @@
   ],
   "scripts": {
     "build": "npm run clean && tsc && dev-tool run bundle && npm run minify && dev-tool run vendored mkdirp ./review && npm run extract-api",
-    "minify": "uglifyjs -c -m --comments --source-map \"content='./dist/index.js.map'\" -o ./dist/index.min.js ./dist/index.js",
+    "minify": "dev-tool run vendored uglifyjs -c -m --comments --source-map \"content='./dist/index.js.map'\" -o ./dist/index.min.js ./dist/index.js",
     "prepack": "npm run build",
     "pack": "npm pack 2>&1",
     "extract-api": "dev-tool run extract-api",
