[communication] Update @azure/communication-chat to ESM/vitest

--- a/sdk/communication/communication-chat/tsconfig.json
+++ b/sdk/communication/communication-chat/tsconfig.json
@@ -2,11 +2,21 @@
   "extends": "../../../tsconfig",
   "compilerOptions": {
     "paths": {
-      "@azure/communication-chat": ["./src/index"]
+      "@azure/communication-chat": [
+        "./src/index"
+      ]
     },
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "rootDir": "."
   },
-  "include": ["src/**/*.ts", "src/**/*.mts", "src/**/*.cts", "samples-dev/**/*.ts", "test/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.mts",
+    "src/**/*.cts",
+    "samples-dev/**/*.ts",
+    "test/**/*.ts",
+    "test/**/*.mts",
+    "test/**/*.cts"
+  ],
 }
