we ensure that ArtifactPackageNames variable is filtered to just the artifacts in the artifactlist when one is present. however, we didn't use the variable during the copy packages step. this adjustment may be necessary elsewhere as well

--- a/eng/pipelines/templates/steps/build.yml
+++ b/eng/pipelines/templates/steps/build.yml
@@ -84,8 +84,7 @@ steps:
       ServiceDirectory: ${{parameters.ServiceDirectory}}
 
   - pwsh: |
-      $artifacts = Get-ChildItem -Recurse -Force "$(Build.ArtifactStagingDirectory)/PackageInfo/*.json" `
-          | ForEach-Object { $_.Name.Replace(".json", "") }
+      $artifacts = $(ArtifactPackageNames).Split(",")
 
       foreach ($artifact in $artifacts)
       {
